
2011-August-10 Struan Robertson

	* BeyerSwinehart.cpp: Added a separate implementation of Beyer-Swinehart
	algorithm.  
	* ClassicalRotor.cpp, QMRotor.cpp, MolecularComponents.h/.cpp: 
	Refactored to account for new BeyerSwinehart class.	
	
2011-August-02 Struan Robertson

	* ClassicalRotor.cpp, QMRotor.cpp: Corrected for missing electronic 
	excitation term.
	* Marquardt.cpp: Corrected output statement.	
	
2011-July-31 Struan Robertson

	* ClassicalRotor.cpp, QMRotor.cpp, MolecularComponents.cpp/.h: Initial 
	refactoring of partition function methods as part of improved 
	thermodynamic function calculation.
	
2011-July-17 Struan Robertson

	* Marquardt.cpp, fitting.cpp, FittingUtils.cpp/.h: Refactor of fitting
	methods, utility functions moved to base class.
	
2011-July-16 Struan Robertson

	* Marquardt.cpp, MesmerMaths.cpp/.h: Tidying up of goodness of fit test.

2011-July-14 Struan Robertson

	* Marquardt.cpp, MesmerMaths.cpp/.h: Initial implementation of goodness 
	of fit test.

2011-July-08 Struan Robertson

	* Marquardt.cpp: Add parameter error estimates.

2011-July-06 Struan Robertson

	* Marquardt.cpp: Tidying up of Marquardt class.

2011-July-01 Struan Robertson

	* Marquardt.cpp: First pass implementation of Marquardt algorithm.

2011-June-20 Chris Morley

	Better error reporting for failing file from Paul Marshall's group.

	* src/main.cpp: flush log file after parsing so messages can be seen
	even if fails later.

	* src/XMLPersist.cpp: Error message for malformed CML property.

	* defaults.xml: add a default for <me:MarquardtDerivDelta> to prevent
	a crash if not specified. Other params probably need a default too.

2011-June-19 Struan Robertson

	* Marquardt.cpp: Addition of plug-in that will implement the Marquardt 
	algorithm.

2011-June-18 Struan Robertson

	* fitting.cpp: Minor fix to fitting method, previous Chi^2 value returned 
	if boundary encountered.
	* MolecularComponents.h/.cpp : Enum introduced for rotational top 
	specification.