@@ -508,6 +508,7 @@ src/oberror.h -text
 src/plugins/BeyerSwinehart.cpp -text
 src/plugins/BoltzmannDistribution.cpp -text
 src/plugins/ClassicalRotor.cpp -text
+src/plugins/DefinedStatesRotor.cpp -text
 src/plugins/EckartCoefficients.cpp -text
 src/plugins/ExponentialDown.cpp -text
 src/plugins/FittingUtils.cpp -text
