@@ -38,6 +38,8 @@ namespace mesmer
 
     void writeTableHeader(const string& text, const string& unit) const ;
 
+	void writeTableEntry(Molecule *pmol, double temp, double unitFctr) const ;
+
     int m_nTemp ;
     double m_TempInterval ;
     string m_Unit ;
@@ -59,10 +61,22 @@ namespace mesmer
 
     double unitFctr(1.0/kJPerMol_in_RC) ;
     if (m_Unit == "kcal/mol") 
-       unitFctr = 1.0/kCalPerMol_in_RC ;
+      unitFctr = 1.0/kCalPerMol_in_RC ;
 
     MesmerEnv& Env = pSys->getEnv() ;
     Env.MaxCell = 100000 ;
+
+    // Make provision for the special case of T = 298.15.
+
+    bool   tempLessThan298(true) ;
+    double temp289(298.15) ;
+
+    // Suppress the testing output of DOS else it will appear in the table output.
+
+    bool testDOS = pSys->m_Flags.testDOSEnabled ;
+    pSys->m_Flags.testDOSEnabled = false ;
+
+    // Begin table.
 
     ctest << endl ;
     underlineText(string("Thermodynamic Tables")) ; 
@@ -76,18 +90,38 @@ namespace mesmer
     for (; molItr != molItrEnd ; molItr++) {
 
       Molecule *pmol = molItr->second;
-      writeTableHeader(pmol->getName(), m_Unit) ;       
+      writeTableHeader(pmol->getName(), m_Unit) ;
+	  tempLessThan298 = true ;
       for (int i(1); i < m_nTemp ; i++) {
         double temp(m_TempInterval*double(i)) ;
-        double enthalpy, entropy, gibbsFreeEnergy ;
-        pmol->getDOS().thermodynamicsFunctions(temp, unitFctr, enthalpy, entropy, gibbsFreeEnergy) ;
-        ctest << formatFloat(temp, 6, 11) << formatFloat(enthalpy, 6, 15) 
-          << formatFloat(entropy, 6, 15) << formatFloat(gibbsFreeEnergy, 6, 15) << endl ;
+        if (tempLessThan298 && temp > temp289) {
+
+          // Special case of T = 289.15
+
+          tempLessThan298 = false ;
+          ctest << endl ;
+          writeTableEntry(pmol, temp289, unitFctr) ;
+          ctest << endl ;
+        }
+        writeTableEntry(pmol, temp, unitFctr) ;
         if (!(i % 5)) 
           ctest << endl ;
       }
+      if (tempLessThan298) {
+
+        // Special case of T = 289.15
+
+        tempLessThan298 = false ;
+        ctest << endl ;
+        writeTableEntry(pmol, temp289, unitFctr) ;
+        ctest << endl ;
+      }
 
     }
+
+    // Revert the setting status of DOS testing.
+
+    pSys->m_Flags.testDOSEnabled = testDOS ;
 
     return true ;
 
@@ -128,6 +162,13 @@ namespace mesmer
     sstrdatum << setw(15) << sstrunit.str()  ;
 
     underlineText(sstrdatum.str());
+  }
+
+  void ThermodynamicTable::writeTableEntry(Molecule *pmol, double temp, double unitFctr) const {
+        double enthalpy(0.0), entropy(0.0), gibbsFreeEnergy(0.0) ;
+        pmol->getDOS().thermodynamicsFunctions(temp, unitFctr, enthalpy, entropy, gibbsFreeEnergy) ;
+        ctest << formatFloat(temp, 6, 11) << formatFloat(enthalpy, 6, 15) 
+          << formatFloat(entropy, 6, 15) << formatFloat(gibbsFreeEnergy, 6, 15) << endl ;
   }
 
   bool ThermodynamicTable::ReadParameters(PersistPtr ppControl) {
